[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "node.ext.directory"
version = "2.0.0.dev0"
description = "Filesystem directory abstraction based on nodes"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Node Contributors", email = "dev@conestack.org"}]
keywords = ["node", "directory", "file"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "node>=1.0",
]

[project.urls]
Homepage = "http://github.com/conestack/node.ext.directory"

[tool.hatch.build.targets.wheel]
packages = ["src/node"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
